--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -196,7 +196,7 @@ disable404 = true
         [[params.skills.list]]
         skill = "Python & Django"
         level = "98%"
-                
+
         [[params.skills.list]]
         skill = "Javascript & jQuery"
         level = "98%"
@@ -217,13 +217,20 @@ disable404 = true
         skill = "Sketch & Photoshop"
         level = "60%"
 
+    # Know-how section
+    [params.knowhow]
+    enable = true
+    icon = "fa-rocket"
+    title = "Know-how"
+    list = ["Software Development"]
+
     # Footer section
 
     # The original template is released under the Creative Commons Attribution 3.0 License.
     # Please keep the original attribution link when using for your own project.
     # If you'd like to use the template without the attribution,
     # you can check out other license options via template author's website: themes.3rdwavemedia.com
-    # 
+    #
     # As for Hugo port you may rewrite the "Ported for..." line with setting your name below.
 
     [params.footer]
